# fastbook

./: .gitignore  pyproject.toml  requirements.txt
clean/: 04_mnist_basics_BAS_EDITS.ipynb
clean/bas/: chap4.ipynb  chap4.py  chap4_fr2.py
